# litedit

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  litedit.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: Editor.svelte  Header.svelte  ShortcutsOverlay.svelte  fileStore.svelte.ts  linkCompletion.ts  themes.ts
